fixed button color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 submit.</p>
             <p class="lead">Feel free to add as many animals as you want!</p>
         </div>
-    </div>
+    </div> 
     <div class="container">
         <div id="buttons-view"></div>
 
@@ -32,7 +32,7 @@
                 <label for="exampleInputPassword1">Add a Animal</label>
                 <input type="text" id="animal-input" class="form-control">
             </div>
-            <button id="add-animal" type="submit" class="btn btn-success">Submit</button>
+            <button id="add-animal" type="submit" class="btn">Submit</button>
         </form>
         <div class="container-2">
             <div id="gifs-appear-here"></div>
